# wheelchair-ergometer-game-controller

./: CMakeLists.txt  LICENSE  README.md  west.yml
HID_joystick/: CMakeLists.txt  prj.conf
HID_joystick/src/: main.c
button/: CMakeLists.txt  prj.conf
button/boards/: nrf52840dk_nrf52840.overlay
button/src/: main.c
configuration/adafruit_itsybitsy_nrf52840/: adafruit_itsybitsy_nrf52840.overlay  ble_adv_def.h  buttons_def.h  prj.conf
configuration/common/: hid_report_desc.c  hid_report_desc.h  settings_loader_def.h
configuration/nrf52840dk_nrf52840/: ble_adv_def.h  click_detector_def.h  nrf52840dk_nrf52840.overlay  prj.conf
drivers/qdec_gpio/: qdec_gpio.c
hid_sample/: prj.conf
hid_sample/src/: main.c
project/: CMakeLists.txt  Kconfig  prj.conf
project/boards/adafruit_itsybitsy_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  adafruit_itsybitsy_nrf52840-pinctrl.dtsi  adafruit_itsybitsy_nrf52840.dts  adafruit_itsybitsy_nrf52840.yaml  adafruit_itsybitsy_nrf52840_defconfig  pre_dt_board.cmake
project/boards/adafruit_itsybitsy_nrf52840/doc/: index.rst
project/configuration/adafruit_itsybitsy_nrf52840/: adafruit_itsybitsy_nrf52840.overlay  click_detector_def.h  prj.conf
project/configuration/common/: hid_report_desc.c  settings_loader_def.h
project/configuration/nrf52840dk_nrf52840/: ble_adv_def.h  nrf52840dk_nrf52840.overlay  prj.conf
project/drivers/qdec_gpio/: qdec_gpio.c
project/dts/bindings/: nordic,qdec-gpio.yaml
project/src/: main.c
project/src/events/: CMakeLists.txt  Kconfig  ble_module_event.c  ble_module_event.h  encoder_module_event.c  qdec_module_event.c  qdec_module_event.h
project/src/modules/: CMakeLists.txt  Kconfig.app_module  Kconfig.bluetooth_module  Kconfig.encoder_module  Kconfig.hid_module  Kconfig.led_module  Kconfig.qdec_module  ble_module.c  encoder_module.c  hid_module.c  led_module.c  modules_common.c  modules_common.h  qdec_module.c
qdec/: CMakeLists.txt  Kconfig  prj.conf
qdec/boards/: nrf52840dk_nrf52840.overlay
qdec/drivers/qdec_gpio/: Kconfig  qdec_gpio.c
qdec/src/: main.c
qdec/src/events/: Kconfig  qdec_module_event.c  qdec_module_event.h
qdec/src/modules/: CMakeLists.txt  Kconfig.qdec_module  modules_common.c  qdec_module.c
src/events/: CMakeLists.txt  Kconfig  encoder_module_event.c  encoder_module_event.h
src/modules/: CMakeLists.txt  Kconfig.app_module  Kconfig.encoder_module  Kconfig.hid_module  encoder_module.c  hid_module.c  led_module.c  (+2 more)
(+1 files in other folders)
